[package]
name = "rsomics-unifrac"
version = "0.1.0"
description = "Pairwise UniFrac phylogenetic beta-diversity (unweighted / weighted / weighted-normalized) from a feature count table + a rooted Newick tree — scikit-bio beta_diversity equivalent, value-exact"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-unifrac"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-unifrac"
path = "src/main.rs"

[lib]
name = "rsomics_unifrac"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-phylo-tree = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
